syntax = "proto3";

// generate separate or multiple java file for each generated class.
option java_multiple_files = true;
option java_package = "grpc.services.reserve_seat";
// Class name of the wrapper class which represent this file.
option java_outer_classname = "ReserveSeatServiceImpl";

// package name to avoid name collisions
package office_service;

// Interface exported by the server.
service ReserveSeatService {

  // rpc method for server stream calls
  rpc reserve(ReserveSeatRequest) returns (stream ReserveSeatResponse) {}

  // rpc method for unary calls
  rpc same_seat(NoSameSeatRequest) returns (NoSameSeatResponse) {}
}

// define each variable in rpc method separately
message ReserveSeatRequest {
  int32 seat_number = 1;
}

message ReserveSeatResponse {
  int32 seat_number = 1;
  int32 seat_number_min = 2;
  int32 seat_number_max = 3;
}

message NoSameSeatRequest {
  int32 same_seat_number = 1;
}

message NoSameSeatResponse {
  string no_same_seat_message = 2;
}
